tests/templates/elb-pod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: echoserver
---
apiVersion: v1
kind: Pod
metadata:
  name: echoserver
  namespace: echoserver
  labels:
    app: echoserver
spec:
  containers:
  - image: k8s.gcr.io/e2e-test-images/echoserver:2.5
    imagePullPolicy: Always
    name: echoserver
    ports:
    - containerPort: 8080
